# l-r-system

ChatServer/: CMakeLists.txt
ChatServer/include/: CServer.h  message.grpc.pb.h  message.pb.h
GateServer/: .gitignore
StatusServer/: CMakeLists.txt
StatusServer/include/: MysqlDao.h  message.grpc.pb.h  message.pb.h
life/: Makefile.Debug  Makefile.Release  life_resource.rc  ui_chatdialog.h  ui_chatpage.h  ui_chatuserwid.h  ui_loadingdlg.h  ui_logindialog.h  ui_mainwindow.h  ui_registerdialog.h  ui_resetdialog.h
life/debug/: object_script.life.Debug
life/release/: moc_bubbleframe.cpp  moc_chatdialog.cpp  moc_chatitembase.cpp  moc_chatpage.cpp  moc_chatuserlist.cpp  moc_chatuserwid.cpp  moc_chatview.cpp  moc_clickedbtn.cpp  moc_clickedlabel.cpp  moc_customizeedit.cpp  moc_httpmgr.cpp  moc_listitembase.cpp  moc_loadingdlg.cpp  moc_logindialog.cpp  moc_mainwindow.cpp  moc_messagetextedit.cpp  moc_picturebubble.cpp  moc_registerdialog.cpp  moc_resetdialog.cpp  moc_tcpmgr.cpp  moc_textbubble.cpp  object_script.life.Release
